# spark-forecast

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  databricks.yml  pyproject.toml  setup.py  tox.ini
.dbx/: project.json
.github/workflows/: onpush.yml  onrelease.yml
conf/: deployment.yml  dev_config.yml  prod_config.yml  staging_config.yml
conf/tasks/: autoarima_config.yml  create_database_config.yml  croston_config.yml  evaluation_config.yml  exponential_smoothing_config.yml  ingest_config.yml  moving_average_config.yml  naive_model_config.yml  prophet_config.yml  random_forest_config.yml  sample_ml_config.yml  split_config.yml  xgboost_config.yml
dbx_demand_forecast/: common.py  evaluation.py  model.py  schema.py  split.py  utils.py
dbx_demand_forecast/tasks/: create_database.py  evaluation.py  ingest.py  model.py  naive_model.py  sample_etl_task.py  sample_ml_task.py  split.py
docs/: diagrams.drawio
notebooks/: sample_notebook.py
spark_forecast/: common.py  evaluation.py  model.py  params.py  schema.py  split.py  utils.py
spark_forecast/tasks/: create_database.py  evaluation.py  ingest.py  model.py  split.py
tests/: utils.py
tests/integration/: conftest.py  e2e_test.py  test_create_database.py  test_evaluation.py  test_ingest.py  test_model.py  test_naive_model.py  test_split.py
tests/unit/: conftest.py  sample_test.py  test_create_database.py  test_evaluation.py  test_ingest.py  test_model.py  test_naive_model.py  test_split.py  test_utils.py  utils.py
tests/unit/data/sales/: sales.csv
tests/unit/tasks/: test_create_database.py  test_evaluation.py  test_ingest.py  test_model.py  test_split.py
