[tool.poetry]
name = "dbx_demand_forecast"
version = "0.1.0"
description = ""
authors = ["Diego Alberto Garrido Amaya <diego.garrido.6568@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pyyaml = "*"
darts = "0.26.0"
torch = ">=1.13.1,<2"
prophet = ">=1.1.1"

# there is no need to install them on Databricks, there are already available
[tool.poetry.group.dev.dependencies]
pyspark = "3.3.1"
delta-spark = "2.2.0"
pyarrow = ">=7.0.0"
pandas = ">=1.4.3,<2"
mlflow = "1.29.0"
mlflow-skinny = "1.29.0"
mypy = "^1.4.1"
pyright = "^1.1.320"
black = "^22.12.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
bandit = "^1.7.5"
pre-commit = "^3.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.mansonry.api"

[tool.poetry.plugins."console_scripts"]
"create_database" = "dbx_demand_forecast.tasks.create_database:entrypoint"
"ingest" = "dbx_demand_forecast.tasks.ingest:entrypoint"
"split" = "dbx_demand_forecast.tasks.split:entrypoint"
"exponential_smoothing" = "dbx_demand_forecast.tasks.model:exponential_smoothing_entrypoint"
"autoarima" = "dbx_demand_forecast.tasks.model:autoarima_entrypoint"
"prophet" = "dbx_demand_forecast.tasks.model:prophet_entrypoint"
"evaluation" = "dbx_demand_forecast.tasks.evaluation:entrypoint"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -s -p no:warnings"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "[pytest][%(asctime)s][%(levelname)s][%(module)s][%(funcName)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "INFO"
pythonpath = ["."]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.bandit]
exclude_dirs = ["tests"]

[tool.coverage.run]
branch = true
source = [
    "dbx_demand_forecast"
]

[tool.coverage.report]

exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

ignore_errors = true
omit = [
    "tests/*",
    "setup.py",
    "dbx_gen_prospector/common.py",
    # this file is autogenerated by dbx
    "dbx_demand_forecast/common.py"
]
