[tool.poetry]
name = "spark-forecast"
version = "0.1.0"
description = ""
authors = ["Diego Alberto Garrido Amaya <diego.garrido.6568@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pyyaml = "*"
darts = "0.26.0"
torch = ">=1.13.1,<2"
prophet = ">=1.1.1"
protobuf = "<=3.20"

# there is no need to install them on Databricks, there are already available
[tool.poetry.group.dev.dependencies]
pyspark = "3.4.1"
delta-spark = "2.4.0"
pyarrow = ">=7.0.0"
pandas = ">=1.4.3,<2"
mlflow = "2.5.0"
mlflow-skinny = "2.5.0"
mypy = "^1.4.1"
pyright = "^1.1.320"
black = "^22.12.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
bandit = "^1.7.5"
pre-commit = "^3.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.mansonry.api"

[tool.poetry.plugins."console_scripts"]
"create_database" = "spark_forecast.tasks.create_database:entrypoint"
"ingest" = "spark_forecast.tasks.ingest:entrypoint"
"split" = "spark_forecast.tasks.split:entrypoint"
"exponential_smoothing" = "spark_forecast.tasks.model:exponential_smoothing_entrypoint"
"autoarima" = "spark_forecast.tasks.model:autoarima_entrypoint"
"prophet" = "spark_forecast.tasks.model:prophet_entrypoint"
"evaluation" = "spark_forecast.tasks.evaluation:entrypoint"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -s -p no:warnings"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "[pytest][%(asctime)s][%(levelname)s][%(module)s][%(funcName)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "INFO"
pythonpath = ["."]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.bandit]
exclude_dirs = ["tests"]

[tool.coverage.run]
branch = true
source = [
    "spark_forecast"
]

[tool.coverage.report]

exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

ignore_errors = true
omit = [
    "tests/*",
    "setup.py",
    "spark_forecast/common.py"
]
